--- a/QAthleticsWebRep/Pages/Index.razor
+++ b/QAthleticsWebRep/Pages/Index.razor
@@ -13,7 +13,33 @@
 			<div class="col-md-offset-1 col-md-10 col-sm-12">
 				<h3 class="wow bounceIn" data-wow-delay="0.9s">Hello! you are welcome to</h3>
 				<h1 class="wow fadeInUp" data-wow-delay="1.6s">Professional<br>Fitness Club</h1>
-				<a href="#overview" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">LEARN MORE</a>
+				<a href="#siginin" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">SIGN IN</a>
+			</div>
+
+		</div>
+	</div>
+</section>
+
+<section id="siginin" class="parallax-section">
+	<div class="container">
+		<div class="row">
+
+			<div class="wow fadeInUp col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10" data-wow-delay="0.9s">
+				<h2>Signin</h2>
+				<p>Get discounts for your personal fitness and gym services now.</p>
+				<div class="newsletter_detail">
+					<form id="newsletter-signup">
+						<div class="col-md-6 col-sm-6">
+							<input name="name" @bind-value="@Email" type="email" class="form-control" placeholder="Email">
+					  	</div>
+						<div class="col-md-6 col-sm-6">
+							<input @bind-value="@Password" type="password" class="form-control" placeholder="Password">
+					  	</div>
+						<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
+							<input @onclick="@(async() => await Signin())" type="submit" class="form-control" value="SignIn">
+						</div>
+				  	</form>
+				</div>
 			</div>
 
 		</div>
