--- a/QAthleticsWebRep/Pages/Index.razor
+++ b/QAthleticsWebRep/Pages/Index.razor
@@ -30,15 +30,18 @@
 				<h2>Signin</h2>
 				<p>Unlock your potential with exclusive access to tailored fitness services and offers.</p>
 				<div class="newsletter_detail">
-					<div class="col-md-6 col-sm-6">
-						<input type="email" class="form-control" placeholder="Email">
-					</div>
-					<div class="col-md-6 col-sm-6">
-						<input type="password" class="form-control" placeholder="Password">
-					</div>
-					<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-						<input name="submit" type="submit" class="form-control" value="Sign In">
-					</div>
+					<form @onsubmit="@(async() => await Signin())" method="post" id="newsletter-signup">
+						<div class="col-md-12 col-sm-12">
+							<input @bind-value="UserId" type="text" class="form-control" placeholder="User Id" required>
+						</div>
+					
+						<div class="col-md-12 col-sm-12">
+							<input @bind-value="Password" type="password" class="form-control" placeholder="Password" required>
+						</div>
+						<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
+							<input name="submit" type="submit" class="form-control" value="Sign In">
+						</div>
+					</form>
 				</div>
 			</div>
 
