--- a/QAthleticsWebRep/Pages/Index.razor
+++ b/QAthleticsWebRep/Pages/Index.razor
@@ -38,6 +38,9 @@
 						<div class="col-md-12 col-sm-12">
 							<input @bind-value="Password" type="password" class="form-control" placeholder="Password" required>
 						</div>
+						<div class="col-md-12 col-sm-12">
+							<label style="color: red; font-size: 16px; font-weight: normal;">@ErrorString</label>
+						</div>
 						<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
 							<input name="submit" type="submit" class="form-control" value="Sign In">
 						</div>
