Add Picture in the table

--- a/QAthleticsWebRep/Pages/UserPages/Competitions.razor
+++ b/QAthleticsWebRep/Pages/UserPages/Competitions.razor
@@ -49,7 +49,7 @@
                                 {
                                     <tr>
                                         <td>@champion.Name</td>
-                                        <td>@champion.Image</td>
+                                        <td><img src="@champion.Image" class="rounded-image" /></td>
                                         <td>@champion.Address</td>
                                         <td>@champion.StartDate</td>
                                         <td>@champion.EndDate</td>
