--- a/QAthleticsWebRep/wwwroot/css/style.css
+++ b/QAthleticsWebRep/wwwroot/css/style.css
@@ -458,6 +458,15 @@ thead, th {
     z-index: 1;
 }
 
+.rounded-image {
+    width: 100%;
+    max-width: 50px;
+    height: 100%;
+    max-height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 
 /*---------------------------------------
     Blog section              
