style changes of navbar

--- a/QAthleticsWebRep/Pages/Index.razor
+++ b/QAthleticsWebRep/Pages/Index.razor
@@ -6,7 +6,7 @@
 <!-- =========================
 	HOME SECTION
 ============================== -->
-<section id="home" style="background-image: url(@currentBackground);" class="parallax-section">
+<section id="home" style="background-image: url(@CurrentBackground);" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
@@ -22,7 +22,7 @@
 	</div>
 </section>
 
-<section id="siginin" class="parallax-section">
+<section id="siginin" style="background-image: url(@SigninBackground);" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
