--- a/QAthleticsWebRep/wwwroot/css/style.css
+++ b/QAthleticsWebRep/wwwroot/css/style.css
@@ -388,7 +388,20 @@ a {
     padding-bottom: 12rem;
     height: 100vh;
     z-index: 0;
+    overflow: hidden; /* Ensures the overlay stays confined */
 }
+
+    /* Overlay for #siginin */
+    #siginin::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8); 
+        z-index: -1;
+    }
 
     #siginin .newsletter_detail {
         padding-top: 3rem;
@@ -430,7 +443,6 @@ a {
                 color: #26253a;
             }
 
-
 /*---------------------------------------
    Table section              
 -----------------------------------------*/
@@ -454,6 +466,10 @@ a {
     color: #26253a;
 }
 
+tbody tr{
+    cursor: pointer;
+}
+
 thead, th {
     font-weight: bold;
     position: sticky;
@@ -468,8 +484,7 @@ thead, th {
     max-width: 50px;
     height: 100%;
     max-height: 50px;
-    object-fit: cover;
-    border-radius: 50%;
+    object-fit: fill;
 }
 
 
