--- a/QAthleticsWebRep/wwwroot/css/style.css
+++ b/QAthleticsWebRep/wwwroot/css/style.css
@@ -480,17 +480,123 @@ thead, th {
 }
 
 .rounded-image {
-    width: auto; /* Use the actual width of the image */
-    height: auto; /* Use the actual height of the image */
-    max-height: none; /* Remove any previous size restrictions */
-    object-fit: contain; /* Prevent distortion */
+    width: auto; 
+    height: auto;
+    max-height: none; 
+    object-fit: contain;
 }
 
-/* Add cell-specific styling */
 td img {
-    display: block; /* Ensure no extra padding or margins */
-    margin: auto; /* Center images within cells */
+    display: block;
+    margin: auto;
 }
+
+/*---------------------------------------
+    Dialog Box section              
+-----------------------------------------*/
+/* Overlay Styling */
+.dialog-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1050;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Dialog Box Styling */
+.dialog-box {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    width: 80%;
+    max-width: 80vw;
+    max-height: 80vh;
+    position: relative;
+    padding: 20px;
+    z-index: 1060;
+}
+
+/* Heading and Close Button */
+.dialog-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+    .dialog-header h5 {
+        margin: 0;
+        font-size: 18px;
+    }
+
+.dialog-close-button {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/* Content Styling */
+.dialog-content {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+    .dialog-content img {
+        max-width: 100%;
+        height: auto;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+.dialog-filters {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+    .dialog-filters label {
+        font-weight: bold;
+        margin-bottom: 5px;
+    }
+
+    .dialog-filters select {
+        padding: 5px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+/* Table Styling */
+.dialog-box-table-div {
+    /*max-height: calc(50vh - 50rem);*/
+}
+
+.dialog-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+    .dialog-table th, .dialog-table td {
+        border: 1px solid #ccc;
+        padding: 8px;
+        text-align: left;
+    }
+
+    .dialog-table th {
+        background-color: #f9f9f9;
+        font-weight: bold;
+    }
+
+    .dialog-table tr:nth-child(even) {
+        background-color: #f1f1f1;
+    }
+
 
 
 /*---------------------------------------
