--- a/QAthleticsWebRep/Pages/UserPages/Competitions.razor
+++ b/QAthleticsWebRep/Pages/UserPages/Competitions.razor
@@ -119,7 +119,7 @@
             </div>
 
             <!-- Third Line: Table -->
-            <div class="dialog-box-table-div">
+            <div class="dialog-box-table-div table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
